formatted home page

--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,9 @@
   --dk-pink: rgb(248,47,117)
   --sunglow: #ffc857
   --ultra-violet: #4f4789
+  --slate-blue: #756cb5
+  --silver-lake-blue: #648fce
+  --penn-red: #9a0a0a
 }
 
 .App {
